# WaterNatureAI

./: .gitignore  DEPLOY.md  README.md
backend/: .env.example  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_company_capability_fields.py  0003_app_settings.py  0004_company_profile_fields.py  0005_company_document.py  0006_pursuits.py  0007_action_meta.py  0008_notification_rules.py  0009_keyword_watches.py  0010_deadline_reminder.py  0011_ksic_industry.py  README.md  cf4a09a21225_0001_init.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  ratelimit.py
backend/app/core/: celery_app.py  config.py  crypto.py  dates.py  security.py  security_log.py
backend/app/db/: base.py
backend/app/schemas/: auth.py  company.py  opportunity.py
backend/app/services/: auth_service.py  keyword_watch.py  keywords.py  ksic.py  llm.py  reminders.py
backend/scripts/: _activate_kstartup.py  _activate_ntis.py  _backfill_industry.py  _demo_logins.py  _gen_pdfs.py  _health_collectors.py  _ntis_guide.txt  _ntis_matches.py  _probe_ntis.py  _probe_ntis_wait.py  _probe_sources.py  _probe_toss.py  _read_docx.py  _refresh_collectors.py  _run_match.py  _seed_subscription.py  _verify_waternature.py  api_check.py  broaden_collect.py  collect_direct.py  e2e_check.py  embed_and_match.py  onboarding_e2e.py  onboarding_e2e_match.py  seed_demo.py  show_matches.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_billing_service.py  test_bizinfo_upsert.py  test_briefing_kakao.py  test_collector_upsert.py  test_company_router.py  test_feasibility_router.py  test_hide.py  test_keyword_watch.py  test_kstartup_upsert.py  test_matching_run.py  test_notification_rules.py  test_ntis_upsert.py  test_opportunities_sort.py  test_pursuits.py  test_reminders.py  test_saved.py  test_scsbid_upsert.py  test_stats.py
backend/tests/smoke/: test_embedding_live.py  test_kstartup_live.py  test_llm_live.py  test_narajangter_live.py  test_ntis_live.py  test_scsbid_live.py
backend/tests/unit/: test_bizinfo_parse.py  test_client_paging.py  test_company_brain.py  test_company_schema.py  (+16 more)
(+152 files in other folders)
