[project]
name = "bizradar-backend"
version = "0.1.0"
description = "BizRadar AI — AI 사업개발(BD) 에이전트 백엔드 (MVP 스캐폴드)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "celery>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "pgvector>=0.3",                 # 벡터 검색 = PostgreSQL pgvector 확장(Qdrant 대체)
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",      # 파일 업로드(회사소개서)
    "fastembed>=0.3",               # embedding provider (OSS, 키 불필요). 모델: BAAI/bge-m3
    "pypdf>=4.2",                   # FR-004 회사소개서 PDF 텍스트 추출(순수 파이썬)
    # 후속: DOCX/PPTX 추출 시 "python-docx", "python-pptx" 추가
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]
# 픽스처(회사소개서 PDF) 재생성용 — scripts/_gen_pdfs.py. 런타임/테스트 비의존.
fixtures = ["reportlab>=4.0"]
llm = ["anthropic>=0.40"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
# 게이트 범위 = 프로덕션 코드(app/)만. tests는 mock/fixture 특성상 best-effort
# (CI 게이트 비대상). 기본 mypy 호출(`mypy`)이 app/ 만 검사하도록 files 고정.
files = ["app"]
# 운영 미투입 K-Startup/NTIS는 명시 검사(mypy tests/) 시에도 제외 — pytest와 일관.
exclude = '(?x)(tests/.*(kstartup|ntis).*\.py$)'
ignore_missing_imports = true   # celery 등 stub 미제공 서드파티
warn_unused_ignores = true
plugins = []

# 서드파티(타입 정보 없음) 명시 무시 — 정확성 위해 모듈 단위 한정.
[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastembed.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# K-Startup/NTIS 수집기는 운영 미투입(키 미확보) → 테스트도 수집 대상에서 제외.
# (구현/테스트 코드는 보존; 준비되면 아래 ignore 해제로 복귀.)
addopts = "--ignore=tests/unit/test_kstartup_parse.py --ignore=tests/unit/test_ntis_parse.py --ignore=tests/integration/test_kstartup_upsert.py --ignore=tests/integration/test_ntis_upsert.py --ignore=tests/smoke/test_kstartup_live.py --ignore=tests/smoke/test_ntis_live.py"
